chapel-lang.org/docs/2.8/_sources/modules/dists/PrivateDist.rst.txt
.. default-domain:: chpl

.. module:: PrivateDist
   :synopsis: A distribution for mapping domain/array indices to locales in a 1:1 manner. 

PrivateDist
===========
**Usage**

.. code-block:: chapel

   use PrivateDist;


or

.. code-block:: chapel

   import PrivateDist;
.. warning::

   PrivateDist is unstable and may change in the future

.. record:: privateDist : writeSerializable

   
   This ``privateDist`` distribution maps each index ``i``
   between ``0`` and ``numLocales-1`` to ``Locales[i]``.
   
   The index set of a domain distributed over ``privateDist``
   is always ``0..numLocales-1``, regardless of the domain's rank,
   and cannot be changed.
   
   This module declares a module-level constant of type ``privateDist``
   named ``PrivateSpace`` for use as a convenience (so that user programs
   do not need to declare their own).
   
     .. code-block:: chapel
   
       const PrivateSpace: domain(1) dmapped new privateDist();
   
   **Example**
   
   The following code declares a Private-distributed array ``A``.
   The `forall` loop visits each locale and sets the array element
   corresponding to that locale to that locale's ID.
   
   .. literalinclude:: ../../../../test/distributions/doc-examples/PrivateDistExamples.chpl
      :language: chapel
      :start-after: START_EXAMPLE
      :end-before: STOP_EXAMPLE
   
   When run on 6 locales, the output is:
   
   .. literalinclude:: ../../../../test/distributions/doc-examples/PrivateDistExamples.good
   
   **Data-Parallel Iteration**
   
   A `forall` loop over a ``privateDist`` domain or array
   runs a single task on each locale.
   That task executes the loop's iteration corresponding to
   that locale's index in the ``Locales`` array.
   
   
   **Limitations**
   
   Domains and arrays distributed over this distribution
   do not provide some standard domain/array functionality.
   
   This distribution may perform unnecessary communication
   between locales.

